--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, it's <span>Hriddhito</span></h1>
-            <h3>Welcome to my website</h3>
+            <h1><span>Welcome to my website</span></h1>
         </div>
     </section>
 
@@ -54,7 +53,7 @@
     <section class="forall" id="Contact">
         <div class="content">
         <h1>Contact</h1>
-        <p>Feel free to reach out! You can contact me at hriddhitoh@gmail.com. I’m always open to discussing new opportunities, collaborations, or just having a conversation.
+        <p>Feel free to reach out! You can contact me at hriddhitoh@gmail.com/ph: 8100504580 or connect with me on linkedin or github. I’m always open to discussing new opportunities, collaborations, or just having a conversation.
             </p>
         </div>
     </section>
