--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#about">About Me</a>
             <a href="#Education">Education</a>
             <a href="#Experience">Experience</a>
+            <a href="#Projects">Projects</a>
             <a href="#Contact">Contact</a>
         </nav>
     </header>
@@ -48,6 +49,12 @@
         <h1>Experience</h1>
         <p>Throughout my time at UEM, I have gained diverse experiences that have enriched my academic and professional development. I have been involved in events where I’ve learnt about developers, I have been involved in financial events and had a lead role in making posters and flyers. These experiences helped me develop strong leadership, organizational, and collaboration skills. I have also started learning about web and app development on my own due to my passion in these subjects.Whether working independently or as part of a team, these experiences have sharpened my ability to manage time, solve problems creatively, and communicate effectively. I look forward to leveraging these experiences in future professional roles and continuing to grow my skills.</p>
         </div>
+    </section>
+
+    <section class="forall" id="Projects">
+        <div class="content">
+        <h1>Projects and Posters</h1>
+        <p>Throughout my academic career I have created many projects, both in school and in college, such as posters, flyers and other hardcopy based projects. My most notable project being a game development project in school along with my partner known as <a href="https://ishaang06.itch.io/a-quack-escape" style="color: #42847f;">A Quack Escape</a></div>
     </section>
 
     <section class="forall" id="Contact">
